tests/compile-fail/generated/derives-span-Hash-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum-struct-variant.rs:17:6
   |
17 |      x: Error
   |      ^ the trait `std::hash::Hash` is not implemented for `Error`
   |
   = note: required by `std::hash::Hash::hash`
